--- a/index.html
+++ b/index.html
@@ -153,25 +153,8 @@
 			<div class="four columns" >
 				<div class="about-wrap">
 					<div class="about-icon">
-						<svg version="1.1" id="svg-icon-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-							 width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
-						<g>
-							<rect x="1" y="16" fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" width="52" height="40"/>
-						</g>
-						<polyline fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" points="10,14 10,8 63,8 63,48 55,48 "/>
-						<polyline fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" points="1,46 15,32 29,48 39,42 53,54 "/>
-						<circle fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" cx="40" cy="29" r="5"/>
-						</svg>							
-					</div>
-					<h6>Contenidos</h6>
-					<p>Diseñamos tus ideas con creatividad.</p>
-				</div>
-			</div>
-			<div class="four columns" >
-				<div class="about-wrap">
-					<div class="about-icon">
 						<svg version="1.1" id="svg-icon-2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-							 width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+							width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
 						<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="16" y1="24" x2="38" y2="24"/>
 						<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="16" y1="34" x2="38" y2="34"/>
 						<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="16" y1="44" x2="38" y2="44"/>
@@ -194,8 +177,25 @@
 			<div class="four columns" >
 				<div class="about-wrap">
 					<div class="about-icon">
+						<svg version="1.1" id="svg-icon-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+							width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+						<g>
+							<rect x="1" y="16" fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" width="52" height="40"/>
+						</g>
+						<polyline fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" points="10,14 10,8 63,8 63,48 55,48 "/>
+						<polyline fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" points="1,46 15,32 29,48 39,42 53,54 "/>
+						<circle fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" cx="40" cy="29" r="5"/>
+						</svg>							
+					</div>
+					<h6>Contenidos</h6>
+					<p>Diseñamos interfaces gráficas orientadas a la experiencia del usuario.</p>
+				</div>
+			</div>
+			<div class="four columns" >
+				<div class="about-wrap">
+					<div class="about-icon">
 						<svg version="1.1" id="svg-icon-3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-							 width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+							width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
 						<rect x="1" y="7" fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" width="62" height="50"/>
 						<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="1" y1="15" x2="63" y2="15"/>
 						<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="10" y1="11" x2="6" y2="11"/>
@@ -207,8 +207,8 @@
 						<rect x="38" y="25" fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" width="19" height="16"/>
 						</svg>							
 					</div>
-					<h6>Posicionamiento SEO/SEM</h6>
-					<p>Aumentamos la visibilidad de tu negocio en todo Internet</p>
+					<h6>Posicionamiento SEO-SEM</h6>
+					<p>Aumentamos la visibilidad y exposición en todo Internet</p>
 				</div>
 			</div>
 			<div class="clear"></div>
@@ -216,22 +216,22 @@
 				<div class="about-wrap">
 					<div class="about-icon">
 						<svg version="1.1" id="svg-icon-4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-							 width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+							width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
 						<polygon fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" points="26,49.042 54.963,49.042 54.963,11.042 
 							1,11.042 1,49.042 14,49.042 14,59.486 "/>
 						<polyline fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" points="57,41.042 62.963,41.042 62.963,3.042 
 							9,3.042 9,9 "/>
 						</svg>							
 					</div>
-					<h6>Comunicación</h6>
-					<p>Diseñamos el Ecosistema Web con tus redes sociales</p>
+					<h6>Integración</h6>
+					<p>Planificamos el ecosistema web + redes sociales.</p>
 				</div>
 			</div>
 			<div class="four columns" >
 				<div class="about-wrap">
 					<div class="about-icon">
 						<svg version="1.1" id="svg-icon-5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-							 width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+							width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
 						<g>
 							<polygon fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" points="46,30 63,20 63,52 46,42 46,52 1,52 1,20 
 								46,20 	"/>
@@ -243,14 +243,14 @@
 						</svg>						
 					</div>
 					<h6>Imágenes</h6>
-					<p>Brindamos imágenes con calidad y estilo para tus productos</p>
+					<p>Contenidos específicos con calidad y estilo adaptado para tu negocio/productos</p>
 				</div>
 			</div>
 			<div class="four columns" >
 				<div class="about-wrap">
 					<div class="about-icon">
 						<svg version="1.1" id="svg-icon-6" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-							 width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+							width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
 						<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="17" y1="63" x2="47" y2="63"/>
 						<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="32" y1="62" x2="32" y2="42"/>
 						<path fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" d="M48,26c0,8-8,16-16,16s-16-8-16-16"/>
@@ -262,8 +262,8 @@
 						<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="40" y1="23" x2="35" y2="23"/>
 						</svg>					
 					</div>
-					<h6>social media</h6>
-					<p>promocion en redes sociales</p>
+					<h6>Asesoramiento</h6>
+					<p>Proponemos mejoras tecnológicas para facilitar problemas</p>
 				</div>
 			</div>
 		</div>
@@ -288,7 +288,7 @@
 				<div class="content__mask"></div>
 				<img class="content__img" src="images/portfolio/crego.png" alt="Some image" />
 				<h3 class="content__title">La barbería de Crego</h3>
-				<a href="https://labarberiadecrego-prueba.netlify.app/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
+				<a href="https://labarberiadecrego.com/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 		</div>
 		<div class="content-wrap padding-bottom content--layout-2">
@@ -460,9 +460,9 @@
 						</li>
 <!-- 						<li class="icon-footer tipped" data-title="pinterest"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
 							<a href="#"><span class="fa-pinterest"></span></a>
-						</li>
-						<li class="icon-footer tipped" data-title="facebook"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
-							<a href="#"><span class="fa-facebook"></span></a> -->
+						</li>-->
+						<li class="icon-footer tipped" data-title="instagram"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
+							<a href="https://www.instagram.com/pampacode/" target="_blank"><span class="fa-instagram"></span></a>
 						</li>
 					</ul>	
 				</div>
