--- a/index.html
+++ b/index.html
@@ -7,19 +7,10 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-<<<<<<< HEAD
-	<title>Pampa.code - Desarollamos soluciones</title>
-	<meta name="description" content="Pampa.code">
-	<meta name="author" content="Pampa.code">
-	<meta property="og:title" content="Pampa.code">
-	<meta property="og:url" content="https://pampacode.com/">
-	<meta property="og:description" content="Somos 💻 Pampa.code 💻 desarrollamos soluciones">
-=======
 	<title>Pampa.code</title>
 	<meta property="og:title" content="Pampa.code">
 	<meta property="og:url" content="https://pampacode.com/">
 	<meta property="og:description" content="Desarollo y diseño de aplicaciones web 💻">
->>>>>>> master
 	<meta property="og:image" content="https://pampacode.com/images/logo-light.png">
 	<meta property="og:type" content="website">
 	<link rel="icon" 
@@ -74,7 +65,7 @@
 				<a href="index.html" ><div class="logo"></div></a>
 				<ul>
 					<li>
-						<a class="shadow-hover curent-shadow" href="#" >Home</a>
+						<a class="shadow-hover curent-shadow" href="#" data-gal="m_PageScroll2id" data-ps2id-offset="78">Home</a>
 <!-- 						<ul>
 							<li><a class="curent-multi-page" href="index.html">On-Scroll Back Shapes</a></li>
 							<li><a href="index-1.html">Title Follow Mouse</a></li>
@@ -87,20 +78,20 @@
 						</ul> -->
 					</li>
 					<li>
-						<a class="shadow-hover" href="#top-scroll">Acerca</a>
+						<a class="shadow-hover" href="#top-scroll" data-gal="m_PageScroll2id" data-ps2id-offset="78">Acerca</a>
 					</li>
 					<li>
-						<a class="shadow-hover" href="#portfolio">Portfolio</a>
+						<a class="shadow-hover" href="#portfolio" data-gal="m_PageScroll2id" data-ps2id-offset="78">Portfolio</a>
 <!-- 						<ul>
 							<li><a href="blog.html">Journal</a></li>
 							<li><a href="post.html">Single Post</a></li>
 						</ul> -->
 					</li>
 					<li>
-						<a class="shadow-hover" href="#nosotros">Nosotros</a>
+						<a class="shadow-hover" href="#nosotros" data-gal="m_PageScroll2id" data-ps2id-offset="78">Nosotros</a>
 					</li>
 					<li>
-						<a class="shadow-hover" href="#contact">Contacto</a>
+						<a class="shadow-hover" href="#contact" data-gal="m_PageScroll2id" data-ps2id-offset="78">Contacto</a>
 					</li>
 <!-- 					<li>
 						<a class="shadow-hover" href="#">Buy <span>$20</span></a>
@@ -137,7 +128,7 @@
 		<div class="home-link fade-elements">
 			<div class="container">
 				<div class="twelve columns">
-					<a href="#top-scroll" data-gal="m_PageScroll2id" data-ps2id-offset="78"><div class="link-down tipped" data-title="scroll down"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'></div></a>	
+					<a href="#top-scroll" data-gal="m_PageScroll2id" data-ps2id-offset="78"><div class="link-down tipped" data-title="conocé más!"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'></div></a>	
 				</div>
 			</div>						
 		</div>
@@ -461,20 +452,6 @@
 			<div class="two-fifths column" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="social-footer">
 					<ul class="list-social-footer">
-<<<<<<< HEAD
-						<li class="icon-footer tipped" data-title="instagram"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
-							<a href="https://www.instagram.com/pampacode/" target="_blank"><span class="fa-instagram"></span></a>
-						</li>
-						<!-- <li class="icon-footer tipped" data-title="github"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
-							<a href="#"><span class="fa-github"></span></a>
-						</li>
-						<li class="icon-footer tipped" data-title="pinterest"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
-							<a href="#"><span class="fa-pinterest"></span></a>
-						</li>
-						<li class="icon-footer tipped" data-title="facebook"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
-							<a href="#"><span class="fa-facebook"></span></a>
-						</li> -->
-=======
 <!-- 						<li class="icon-footer tipped" data-title="twitter"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
 							<a href="#"><span class="fa-twitter"></span></a>
 						</li> -->
@@ -487,7 +464,6 @@
 						<li class="icon-footer tipped" data-title="instagram"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
 							<a href="https://www.instagram.com/pampacode/" target="_blank"><span class="fa-instagram"></span></a>
 						</li>
->>>>>>> master
 					</ul>	
 				</div>
 			</div>
